--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ main {
     width: 70%;
     text-align: center;
     border: 1px solid black;
-    margin-top: 250px;
+    margin-top: 125px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 100px;
@@ -55,4 +55,8 @@ button {
 
 button:hover {
     background-color:rgb(0, 0, 0, .3);
+}
+
+h4{
+    color: white;
 }
